--- a/index.html
+++ b/index.html
@@ -556,8 +556,8 @@
             content: '';
             position: absolute;
             top: -10px; /* 親ノードから横線までの距離 */
-            left: 0; /* 全幅に伸ばす */
-            right: 0; /* 全幅に伸ばす */
+            left: 0px; 
+            right: 0px;
             border-top: 1px solid #cbd5e0;
             height: 0;
         }
@@ -1099,14 +1099,14 @@
                                         <div class="node hr">
                                             <i class="fas fa-users department-icon"></i><br>
                                             人事部
-                                            <div class="details">責任者: 今戸<br>採用: 1名<br>教育: 1名</div>
+                                            <div class="details">責任者: 今戸<br>採用: 1名<br>教育: 2名</div>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="node accounting">
                                             <i class="fas fa-calculator department-icon"></i><br>
                                             経理部
-                                            <div class="details">責任者: 木村</div>
+                                            <div class="details">責任者: 石岡</div>
                                         </div>
                                     </li>
                                 </ul>
@@ -1129,7 +1129,7 @@
                                         <div class="node infra-dept-1">
                                             <i class="fas fa-server department-icon"></i><br>
                                             インフラ部
-                                            <div class="details">部長: 1名<br>マネジメントメンバー: 4名</div>
+                                            <div class="details">部長: 西小野<br>マネジメントメンバー: 4名</div>
                                         </div>
                                         <ul>
                                             <li><div class="node engineer-group">エンジニア: 75名</div></li>
@@ -1139,7 +1139,7 @@
                                         <div class="node infra-dept-2">
                                             <i class="fas fa-network-wired department-icon"></i><br>
                                             インフラ部
-                                            <div class="details">部長: 1名<br>マネジメントメンバー: 4名</div>
+                                            <div class="details">部長: 今井<br>マネジメントメンバー: 4名</div>
                                         </div>
                                         <ul>
                                             <li><div class="node engineer-group">エンジニア: 75名</div></li>
@@ -1149,7 +1149,7 @@
                                         <div class="node dev-dept">
                                             <i class="fas fa-code department-icon"></i><br>
                                             開発部
-                                            <div class="details">部長: 1名<br>マネジメントメンバー: 4名</div>
+                                            <div class="details">部長: 木田<br>マネジメントメンバー: 4名</div>
                                         </div>
                                         <ul>
                                             <li><div class="node engineer-group">エンジニア: 75名</div></li>
@@ -1159,7 +1159,7 @@
                                         <div class="node consult-dept">
                                             <i class="fas fa-lightbulb department-icon"></i><br>
                                             コンサル部
-                                            <div class="details">部長: 1名<br>マネジメントメンバー: 4名</div>
+                                            <div class="details">部長: 梅野<br>マネジメントメンバー: 4名</div>
                                         </div>
                                         <ul>
                                             <li><div class="node engineer-group">エンジニア: 75名</div></li>
@@ -1215,19 +1215,19 @@
 
         <div class="image-gallery">
             <div class="gallery-item">
-                <img src="images/インフラ.PNG" alt="インフラエンジニアのキャリアパス図" class="content-image" loading="lazy">
+                <img src="images/インフラ.png" alt="インフラエンジニアのキャリアパス図" class="content-image" loading="lazy">
                 <p class="career-title">インフラエンジニア キャリアパス</p>
             </div>
             <div class="gallery-item">
-                <img src="images/開発.PNG" alt="開発エンジニアのキャリアパス図" class="content-image" loading="lazy">
+                <img src="images/開発.png" alt="開発エンジニアのキャリアパス図" class="content-image" loading="lazy">
                 <p class="career-title">開発エンジニア キャリアパス</p>
             </div>
             <div class="gallery-item">
-                <img src="images/コンサル.PNG" alt="コンサルエンジニアのキャリアパス図" class="content-image" loading="lazy">
+                <img src="images/コンサル.png" alt="コンサルエンジニアのキャリアパス図" class="content-image" loading="lazy">
                 <p class="career-title">コンサルエンジニア キャリアパス</p>
             </div>
             <div class="gallery-item">
-                <img src="images/営業.PNG" alt="営業職のキャリアパス図" class="content-image" loading="lazy">
+                <img src="images/営業.png" alt="営業職のキャリアパス図" class="content-image" loading="lazy">
                 <p class="career-title">営業職 キャリアパス</p>
             </div>
         </div>
@@ -1251,7 +1251,7 @@
         <h2>8. ビジネスモデル</h2>
         <p>SPINTECHNOLOGYのビジネスモデルは、以下の4つの主要なサービスと、それらを支える強固なパートナーシップに基づいています。</p>
         <ul>
-            <li>システムインテグレーション<br>お客様が抱えるITシステムに関する様々な課題に対し、分析から設計、開発、導入、運用まで一貫したソリューションを提供し、最適なシステム構築を支援します。</li>
+            <li>システムインテグレーション<br>設計から運用までの一貫したサービスソリューションの提供​</li>
             <li>受託開発サービス<br>生成AI活用支援、Webサイト、LP、ECサイト制作から、各種Webシステム、業務システム、スマートフォンアプリ開発まで、お客様の多様なニーズにお応えする受託開発を幅広く手がけています。</li>
             <li>IT教育サービス<br>ITスクール事業「MANABI」や企業向けIT研修を通じて、実践的なITスキルや知識習得の機会を提供し、社会全体のIT人材育成に貢献しています。</li>
             <li>運用・保守サービス<br>開発したシステムや既存のIT資産が安定的に稼働し続けるよう、確かな技術力に基づいた運用・保守サービスを提供し、お客様のビジネス継続を力強く支えます。</li>
@@ -1272,7 +1272,7 @@
             <li>役職や立場に関わらず、フラットに意見交換ができる風通しの良い組織。社員同士の距離が近く活発なコミュニケーションを通じて互いを高め合える文化がある。</li>
         </ul>
 
-        <h3 id="culture-training">組織文化（研修）</h3>
+        <h3 id="culture-training">組織文化（キャリア研修）</h3>
         <img src="images/キャリア研修.png" alt="研修風景のイメージ" class="content-image">
         <ol>
             <li>研修（社会人基礎、IT研修、技術研修）</li>
@@ -1417,5 +1417,3 @@
 
 </body>
 </html>
-
-
